k8s/order-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-client
  template:
    metadata:
      labels:
        app: order-client
    spec:
      containers:
        - name: order-client
          image: ghcr.io/rumburakgit/order-client:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
