k8s/order-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: ghcr.io/rumburakgit/order-service:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/products
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
