k8s/order-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-client
spec:
  selector:
    app: order-client
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
